@startuml UC07_ViewActivities
' UC-07: View Activities (Orders + Reviews)
skinparam shadowing false
skinparam packageStyle rectangle
skinparam DefaultFontName Arial
left to right direction

package "Entities Circle" as EC {
  class Order
  class Review
}

package "Use Case Circle" as UC {
  interface InputBoundary
  interface OutputBoundary
  class ProfileService {
    +execute(req: GetActivityRequest): GetActivityResponse
  }
  class GetActivityRequest
  class GetActivityResponse

  InputBoundary <|.. ProfileService
  ProfileService ..|> OutputBoundary
}

package "Interface Adapters" as IA {
  class ProfileController { +getActivity() }
  class ActivityPresenter { +present(res: GetActivityResponse) }
  class OrderSummaryDTO
  class ReviewDTO
}

package "Frameworks & Drivers" as FD {
  class "Spring Boot MVC" as Spring
  class "DB (Postgres/H2)\nJPA/Hibernate" as DB
}

ProfileController --> InputBoundary : execute(GetActivityRequest)
ProfileService --> OrderRepository : list orders by createdAt desc
ProfileService --> ReviewRepository : list reviews by createdAt desc
ProfileService --> OutputBoundary : present(GetActivityResponse)
OutputBoundary <.. ActivityPresenter
ActivityPresenter --> OrderSummaryDTO
ActivityPresenter --> ReviewDTO
ProfileController <-- OrderSummaryDTO : HTTP JSON
ProfileController <-- ReviewDTO : HTTP JSON

@enduml